--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "macawmanager",
+  "name": "cse341-personal-proj",
   "version": "1.0.0",
-  "description": "```sh\r npm i express\r npm i node\r npm i body-parser\r ```",
-  "main": "index.js",
+  "description": "",
+  "main": "server.ts",
   "scripts": {
     "build": "npx tsc",
     "start": "npm run build && nodemon dist/server.js",
     "swagger": "ts-node swagger.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Joseph-kaku/macawmanager.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Joseph-kaku/macawmanager/issues"
-  },
-  "homepage": "https://github.com/Joseph-kaku/macawmanager#readme",
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.9.0",
-    "concurrently": "^8.2.2",
-    "mongoose": "^8.0.0",
+    "@types/express": "^4.17.19",
+    "@types/node": "^20.8.6",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.17.0",
+    "joi": "^17.11.0",
+    "joi-password-complexity": "^5.2.0",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.2",
     "rimraf": "^5.0.5",
     "swagger": "^0.7.5",
-    "swagger-autogen": "^2.23.7",
+    "swagger-autogen": "^2.23.6",
+    "swagger-ui-express": "^5.0.0",
     "typescript": "^5.2.2"
   },
+  "engines": {
+    "node": ">=14 <18.17.1"
+  },
   "devDependencies": {
-    "@types/swagger-ui-express": "^4.1.6",
+    "@types/swagger-ui-express": "^4.1.4",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0",
+    "mongodb": "^5.7.0",
     "nodemon": "^3.0.1",
     "swagger-ui-express": "^5.0.0"
   }
