Commented out unfinised work - JK

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cse341-personal-proj",
   "version": "1.0.0",
-  "description": "",
+  "description": "### Installs ```sh npm i typescript npm install @types/express @types/node npm i -D express npm i body-parser npm i -D body-parser npx tsc --init npx tsc npm i -D nodemon npm i rimraf npm i concurrently npm i dotenv npm i -D dotenv npm i swagger npm i swagger-autogen npm i swagger-ui-express npm i -D swagger-ui-express npm i -D @types/swagger-ui-express npm i mongodb npm i -D mongodb npm i mongoose ```",
   "main": "server.ts",
   "scripts": {
     "build": "npx tsc",
