--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
+    "express-validator": "^7.0.1",
     "joi": "^17.11.0",
     "joi-password-complexity": "^5.2.0",
     "mongodb": "^6.1.0",
