--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "cse341-personal-proj",
+  "name": "cse341-team-proj",
   "version": "1.0.0",
   "description": "### Installs ```sh npm i typescript npm install @types/express @types/node npm i -D express npm i body-parser npm i -D body-parser npx tsc --init npx tsc npm i -D nodemon npm i rimraf npm i concurrently npm i dotenv npm i -D dotenv npm i swagger npm i swagger-autogen npm i swagger-ui-express npm i -D swagger-ui-express npm i -D @types/swagger-ui-express npm i mongodb npm i -D mongodb npm i mongoose ```",
   "main": "server.ts",
   "scripts": {
     "build": "npx tsc",
     "start": "npm run build && nodemon dist/server.js",
-    "swagger": "ts-node swagger.ts"
+    "swagger": "ts-node swagger.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/express": "^4.17.19",
-    "@types/node": "^20.8.6",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.0",
     "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "joi": "^17.11.0",
     "joi-password-complexity": "^5.2.0",
     "mongodb": "^6.1.0",
@@ -27,19 +29,24 @@
     "rimraf": "^5.0.5",
     "swagger": "^0.7.5",
     "swagger-autogen": "^2.23.6",
-    "swagger-ui-express": "^5.0.0",
-    "typescript": "^5.2.2"
+    "swagger-ui-express": "^5.0.0"
   },
   "engines": {
     "node": ">=14 <18.17.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.2",
     "@types/swagger-ui-express": "^4.1.4",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "nodemon": "^3.0.1",
-    "swagger-ui-express": "^5.0.0"
+    "supertest": "^6.3.3",
+    "swagger-ui-express": "^5.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4"
   }
 }
